--- a/main.html
+++ b/main.html
@@ -5,8 +5,48 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<style>
+   .hero {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Makes the hero section take full height of the viewport */
+            flex-direction: column;
+            text-align: center;
+        }
 
+        /* Image Styling */
+        .hero img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* "Explore Now" Button Styling */
+        .explore-btn {
+            padding: 15px 30px;
+            background-color: red; /* Green background */
+            color: white;
+            border-radius: 25px;
+            text-decoration: none; /* Remove underline from link */
+            font-size: 18px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        /* Hover effect for button */
+        
+		</style>
 <body>
+
+	  <!-- Hero Section Container -->
+    <div class="hero">
+        <!-- Image inside Hero Section -->
+        <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
+        
+        <!-- "Explore Now" Button (Link styled as button) -->
+        <a href="#" class="explore-btn">Explore Now</a>
+	    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
