--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 		  <h1>Welcome to Our Website</h1>
         <!-- Image inside Hero Section -->
         <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
-        
+         <p>Discover amazing content, exciting offers, and more. Start your journey with us today!</p>
         <!-- "Explore Now" Button (Link styled as button) -->
         <a href="#" class="explore-btn">Explore Now</a>
 	    </div>
